--- a/website/newsletter/225/index.mdx
+++ b/website/newsletter/225/index.mdx
@@ -40,7 +40,9 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 
 ## ⚛️ React {#react}
 
-[React Router 7.3 \- Route Middleware](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v730)
+[![React Router 7.3 - Route Middleware](/emails/issues/225/rr.jpg)](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v730)
+
+**[React Router 7.3 \- Route Middleware](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v730)**
 
 This React Router release introduces a major new middleware feature. It’s not production-ready yet but you can turn it on with the `future.unstable_middleware` future flag. You can use it in framework or library mode. There’s a distinction between client and server middleware. You can use it to implement logging, authentication, and other cross-cutting concerns.
 
@@ -137,8 +139,8 @@ Version 2 coming out soon. Get started with your unique 30-day free trial. Learn
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/225/meme.jpg)](https://x.com/schlimmson/status/1895489183101440486)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/225/meme2.jpg)](https://x.com/sebastienlorber/status/1899482883472961833)
 
 See ya! 👋
