Rename "quick link" to "React link"

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -30,7 +30,7 @@ Last updated: **February 2025**.
   </li>
   <li>
     <b>Placements</b>
-    <>: 1st sponsor, 2nd sponsor, quick link, custom...</>
+    <>: 1st sponsor, 2nd sponsor, sponsored link, custom...</>
   </li>
   <li>
     <b>Subscribers count</b>
@@ -171,12 +171,14 @@ The newsletter structure stays the same every week:
 - 🥇 [**1st sponsor**](#sponsor-1st)
 - ⚛️ React section:
   - 👀 Headlines
-  - ⚡ [**React Quick Link sponsor**](#sponsor-quick-link)
+  - ⚡ [**React Link sponsor**](#sponsor-link)
+  - 🔗 Links
+  - ⚡ [**React Link sponsor**](#sponsor-link)
   - 🔗 Links
 - 🥈 [**2nd sponsor**](#sponsor-2nd)
 - 📱 React-Native section:
   - 👀 Headlines
-  - ⚡ [**React Native Quick Link sponsor**](#sponsor-quick-link)
+  - ⚡ [**React Native Link sponsor**](#sponsor-link)
   - 🔗 Links
 - 🔀 Other section
 - 🤭 Fun section
@@ -235,9 +237,9 @@ This placement appears in the middle of the newsletter, in between the React and
 
 <br />
 
-### ⚡️ Quick Link {#sponsor-quick-link}
+### ⚡️ Sponsored Link {#sponsor-link}
 
-Quick Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links they are interested in.
+Sponsored Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links they are interested in.
 
 <details>
     <summary>Ad constraints and example</summary>
@@ -247,7 +249,7 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
     - **Title**: plain text, no bold/emojis/uppercase and other attention-grabbing hacks
     - **Title**: respects the pattern `ProductName - Description` whenever possible
 
-    **Quick Links examples:**
+    **Sponsored Links examples:**
     - [Zero To Shipped - Master Fast-Paced Fullstack Development and finally ship that product](https://www.zerotoshipped.com/)
     - [Ably Realtime Hackathon - Create a real-time React app, win $19,000 in prizes - from real-time dashboards to collaborative experiences!](https://ably.devpost.com/?utm_campaign=23-hackathon&utm_source=thisweekinreact&utm_medium=referral)
     - [Blitz - Build React Native Apps Faster for iOS, Android, and Web!](https://www.blitz-rn.com/)
@@ -259,7 +261,7 @@ Quick Links are sponsored links inserted in the React or React-Native newsletter
 
 <br />
 
-:::tip Use quick links to
+:::tip Use sponsored links to
 
 - promote a React or React-Native product
 - promote a relevant **piece of content** such as a product tutorial blog post
