--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -36,10 +36,10 @@ It covers topics like why deadlines suck, non-obvious behaviors that will kill y
 
 ## ⚛️ React {#react}
 
-<Todo />
-
 - 💸 [Convex launched an MCP Server](https://convex.link/thisweekmcp)
 - 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
+- 🗓 [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Discover the full lineup : Shruti Kapoor, Quentin de Quelen, Sebastien Chopin! And get a 10% discount with code "TWIR”
+- 🗓 [Future Frontend](https://futurefrontend.com/?utm_source=thisweekinreact) \- 🇫🇮 Espoo - 26-28 May. Web development/design and AI meet on a single track. Secure your spot today with a 10% discount using code "TWIR”
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -51,12 +51,12 @@ It covers topics like why deadlines suck, non-obvious behaviors that will kill y
 
 **[Tests are dead - Meticulous is here](https://www.meticulous.ai?utm_source=thisweekinreact&utm_campaign=mar19th)**
 
-Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort.   
-  
-Dropbox, Bilt Rewards, Lattice and hundreds of engineering organizations rely on Meticulous for their frontend testing.  
-  
-This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code."  
-  
+Meticulous creates and maintains an exhaustive suite of e2e ui tests with **zero** developer effort. 
+
+Dropbox, Bilt Rewards, Lattice and hundreds of engineering organizations rely on Meticulous for their frontend testing.
+
+This quote from the CTO of Traba sums the product up best: "Meticulous has fundamentally changed the way we approach frontend testing in our web applications, fully eliminating the need to write any frontend tests. The software gives us confidence that every change will be completely regression tested, allowing us to ship more quickly with significantly fewer bugs in our code."
+
 This [post](https://www.meticulous.ai/blog/lessons-from-a-decade?utm_source=thisweekinreact&utm_campaign=jan15th) from our CTO, who formerly led a large engineering group at Palantir, sets out the context of why exhaustive testing can double engineering velocity.
 
 ---
