--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /226
-title: "This Week In React #226: ..."
-authors: [slorber]
+title: "This Week In React #226: Parcel, React Query Streaming, RN Worklets, expo/ui, React 19 Migration, React Router, React Scan, RN Framework for Enterprise, Oxc Minifier, Oxlint, Typescript in Go"
+authors: [matthieugicquel, cyrilbo]
 date: 03-19-2025
 unlisted: true
 ---
