--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -8,7 +8,11 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+Cyril and Matthieu from Theodo Apps here 👋, with some big updates in React and React Native!
+
+React Server Components are now supported in Parcel, making it a more viable bundler for modern apps. Callstack is working on a new React Native framework aimed at enterprise teams, promising better build caching. React Native Worklets is bringing real multithreading to React Native, finally decoupling it from animations. And React 19 migrations are picking up speed, with teams sharing insights on adapting to the changes.
+
+Exciting times ahead—let’s dive in! 🚀
 
 <!-- truncate -->
 
