--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -44,7 +44,7 @@ It covers topics like why deadlines suck, non-obvious behaviors that will kill y
 
 [**Parcel v2.14.0**](https://parceljs.org/blog/v2-14-0/)
 
-Parcel is an interesting thing: it’s a very robust and feature-complete bundler, but it’s not used/supported by any major React framework. It doesn’t prevent it from moving forward, with v2.14.0 adding a few big features:
+Parcel is an interesting thing: it’s a very robust and feature-complete bundler. While not used/supported by any major React framework, it doesn’t prevent it from moving forward, with v2.14.0 adding a few big features:
 
 - Server Components with client, server, and static rendering
 - Integrated MDX support (using the rust lib `mdx-rs`)
@@ -56,20 +56,20 @@ If you’re “building your own framework” or have a niche use case, all this
 ---
 
 - 💸 [Convex launched an MCP Server](https://convex.link/thisweekmcp)
-- 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
-- 🗓 [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Discover the full lineup : Shruti Kapoor, Quentin de Quelen, Sebastien Chopin! And get a 10% discount with code "TWIR”
-- 🗓 [Future Frontend](https://futurefrontend.com/?utm_source=thisweekinreact) \- 🇫🇮 Espoo - 26-28 May. Web development/design and AI meet on a single track. Secure your spot today with a 10% discount using code "TWIR”
 - 🐦 [Support for streaming coming to React Query](https://bsky.app/profile/tkdodo.eu/post/3lkiuj7362k2a)
 - 🐦 [A shadcn-ui demo app that shadcn built to test tailwind v4](https://x.com/shadcn/status/1901708807434314186)
+- 🗓 [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Discover the full lineup : Shruti Kapoor, Quentin de Quelen, Sebastien Chopin! And get a 10% discount with code "TWIR”
+- 🗓 [Future Frontend](https://futurefrontend.com/?utm_source=thisweekinreact) \- 🇫🇮 Espoo - 26-28 May. Web development/design and AI meet on a single track. Secure your spot today with a 10% discount using code "TWIR”
 - 📜 [Live Mode](https://www.openstatus.dev/blog/live-mode-infinite-query): Live data updates in React with TanStack's Infinite Queries.
 - 📜 [How we migrated MUI X to React 19](https://mui.com/blog/react-19-update/): They needed to maintain compatibility with React 18 even though there are a few breaking changes in React 19 (with refs and StrictMode).
 - 📜 [Writing static websites with Vite and React](https://blog.carlosn.com.br/post/writing-static-websites-with-vite-and-react/): The author describes how the experimental `vite-ssg-react` package he’s working on works, and what he plans for the future.
 - 📜 [SSR Deep Dive for React Developers](https://www.developerway.com/posts/ssr-deep-dive-for-react-developers): Your framework probably handles SSR for you, but you’ll learn how to implement it yourself, and how it works along the way
 - 📜 [Common React libraries architecture](https://www.felgus.dev/blog/common-react-lib-architecture#react-19)
-- 📦 [React Router v7.4.0](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v740)
-- 📦 [React Scan v0.3.0](https://github.com/aidenybai/react-scan/releases/tag/v0.3.0)
-- 📦 [TanStack Form v1.1.0](https://github.com/TanStack/form/releases/tag/v1.1.0)
-- 🎥 [Theo \- t3․gg \- Tanner just fixed forms (I'm so hyped)](https://www.youtube.com/watch?v=aezimBnSJqY)
+- 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
+- 📦 [React Router 7.4](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v740)
+- 📦 [React Scan 0.3](https://github.com/aidenybai/react-scan/releases/tag/v0.3.0)
+- 📦 [TanStack Form 1.1](https://github.com/TanStack/form/releases/tag/v1.1.0)
+- 🎥 [Theo \- t3․gg \- Tanner just fixed forms](https://www.youtube.com/watch?v=aezimBnSJqY)
 - 🎥 [Epic Web Dev \- Upgrading React Router](https://www.epicweb.dev/tips/upgrading-react-router)
 - 🎥 [Web Dev Simplified \- Next.js Finally Fixed Caching](https://www.youtube.com/watch?v=nHnw3pusFXw)
 
