--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -110,14 +110,14 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 - 🐦 [React Native Bottom Tabs integrate seamlessly with other native UI elements](https://x.com/o_kwasniewski/status/1884537940736393426)
 - 🐦 [expo/ui will launch with expo SDK 53](https://x.com/aleqsio/status/1902034184920584538): It will include fully native input components, iOS form sections, context menus and iOS previews.
 - 🐦 [React Server Functions in Expo Router](https://x.com/Baconbrix/status/1900547469374574966)
+- 📊 [RevenueCat State of Subscription Apps 2025](https://www.revenuecat.com/state-of-subscription-apps-2025/): Cross-platform subscription apps (in particular React Native ones) have better performances in retention and monetization compared to native apps. The top-performing ones excel by optimizing onboarding, surfacing paywalls early, and leveraging hybrid monetization.
+- 📖 [Ultimate Guide to React Native Optimization 2025](https://www.callstack.com/ebook/the-ultimate-guide-to-react-native-optimization): Callstack just published their upgraded guide.
+- 📖 [Expo Documentation - Using push notifications](https://docs.expo.dev/guides/using-push-notifications-services/): Fresh reminder on what services are available to implement push notifications in an Expo app.
 - 📜 [We’re Building a New React Native Framework](https://www.callstack.com/blog/were-building-a-new-react-native-framework): Michał from callstack unveiled features of their React Native framework targeting large mobile teams, emphasizing fast native build caching. It's still not open sourced yet.
 - 📜 [FlatList Optimization: Avoid Re-Rendering When Adding or Removing Items](https://brainsandbeards.com/blog/2025-dont-rerender-new-flatlist-items/)
-- 📖 [Using push notifications \- Expo Documentation](https://docs.expo.dev/guides/using-push-notifications-services/): Fresh reminder on what services are available to implement push notifications in an Expo app.
-- 📖 [Ultimate Guide to React Native Optimization 2025](https://www.callstack.com/ebook/the-ultimate-guide-to-react-native-optimization)
-- 📖 [RevenueCat State of Subscription Apps 2025](https://www.revenuecat.com/state-of-subscription-apps-2025/): Cross-platform subscription apps have better performances in retention and monetization compared to native apps. The top-performing ones excel by optimizing onboarding, surfacing paywalls early, and leveraging hybrid monetization.
 - 📦 [Expo BackgroundTask Beta](https://docs.expo.dev/versions/latest/sdk/background-task/)
-- 📦 [create-react-native-library v0.48: Add template for nitro modules](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.48.0)
-- 📦 [Galeria v1.1: fix new architecture issues, support for edge-to-edge](https://github.com/nandorojo/galeria/releases/tag/v1.1.0)
+- 📦 [Create React Native Library 0.48: Add template for nitro modules](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.48.0)
+- 📦 [Galeria 1.1 - Fix new architecture issues, support for edge-to-edge](https://github.com/nandorojo/galeria/releases/tag/v1.1.0)
 - 🎙️ [RNR 325 \- Legend List with Jay Meistrich](https://infinite.red/react-native-radio/rnr-325-legend-list-with-jay-meistrich)
 
 ---
@@ -130,8 +130,8 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 - 📜 [Support for CSS and Baseline has shipped in ESLint](https://web.dev/blog/eslint-baseline-integration?hl=en)
 - 📦 [Oxc Minifier Alpha](https://oxc.rs/blog/2025-03-13-minifier-alpha): A new minifier that already outperform esbuild and is used with Rolldown, which aims to become the next default bundler for Vite.
 - 📦 [Oxlint Beta](https://oxc.rs/blog/2025-03-15-oxlint-beta): It features over 500 built-in linting rules with significant performance boosts, allowing small to medium projects to fully replace ESLint. ESLint plugin & custom rules support should come in the next major release.
-- 📦 [Astro v5.5](https://astro.build/blog/astro-550/)
-- 📦 [Valibot v1.0](https://valibot.dev/blog/valibot-v1-the-1-kb-schema-library/)
+- 📦 [Astro 5.5](https://astro.build/blog/astro-550/)
+- 📦 [Valibot 1.0](https://valibot.dev/blog/valibot-v1-the-1-kb-schema-library/)
 - 🎥 [Microsoft goes nuclear on TypeScript codebase](https://www.youtube.com/watch?v=PQ2WjtaPfXU)
 
 ---
