--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -125,6 +125,7 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 ## 🔀 Other {#other}
 
 - 🐦 [Deno will likely integrate tsgo](https://x.com/rough__sea/status/1900744510453559762)
+- 👀 [Node.js TSC - Should Corepack stay in the Node.js distribution?](https://github.com/nodejs/TSC/pull/1697): Corepack will stop being distributed with Node.js starting v25.
 - 📜 [Node.js Launches Official Community Space on Discord](https://nodejs.org/en/blog/announcements/official-discord-launch-announcement)
 - 📜 [Implications of Global Privacy Control](https://developer.mozilla.org/en-US/blog/global-privacy-control/)
 - 📜 [Support for CSS and Baseline has shipped in ESLint](https://web.dev/blog/eslint-baseline-integration?hl=en)
