--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -124,15 +124,15 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 
 ## 🔀 Other {#other}
 
-- 🐦 [Deno will likely integrate tsgo](https://x.com/rough__sea/status/1900744510453559762)
 - 👀 [Node.js TSC - Should Corepack stay in the Node.js distribution?](https://github.com/nodejs/TSC/pull/1697): Corepack will stop being distributed with Node.js starting v25.
 - 📜 [Node.js Launches Official Community Space on Discord](https://nodejs.org/en/blog/announcements/official-discord-launch-announcement)
-- 📜 [Implications of Global Privacy Control](https://developer.mozilla.org/en-US/blog/global-privacy-control/)
 - 📜 [Support for CSS and Baseline has shipped in ESLint](https://web.dev/blog/eslint-baseline-integration?hl=en)
 - 📦 [Oxc Minifier Alpha](https://oxc.rs/blog/2025-03-13-minifier-alpha): A new minifier that already outperform esbuild and is used with Rolldown, which aims to become the next default bundler for Vite.
 - 📦 [Oxlint Beta](https://oxc.rs/blog/2025-03-15-oxlint-beta): It features over 500 built-in linting rules with significant performance boosts, allowing small to medium projects to fully replace ESLint. ESLint plugin & custom rules support should come in the next major release.
-- 📦 [Astro 5.5](https://astro.build/blog/astro-550/)
-- 📦 [Valibot 1.0](https://valibot.dev/blog/valibot-v1-the-1-kb-schema-library/)
+- 📦 [Astro 5.5 - Type-safe sessions, better Mermaid diagrams integration](https://astro.build/blog/astro-550/)
+- 📦 [Valibot 1.0 - 1kB alternative to Zod](https://valibot.dev/blog/valibot-v1-the-1-kb-schema-library/)
+- 📦 [Node.js 23.10 - New `--experimental-config-file`](https://nodejs.org/en/blog/release/v23.10.0)
+- 📦 [Node.js 20.19 - require(esm) enabled](https://nodejs.org/en/blog/release/v20.19.0)
 - 🎥 [Microsoft goes nuclear on TypeScript codebase](https://www.youtube.com/watch?v=PQ2WjtaPfXU)
 
 ---
