--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -66,10 +66,10 @@ If you’re “building your own framework” or have a niche use case, all this
 - 📜 [SSR Deep Dive for React Developers](https://www.developerway.com/posts/ssr-deep-dive-for-react-developers): Your framework probably handles SSR for you, but you’ll learn how to implement it yourself, and how it works along the way
 - 📜 [Common React libraries architecture](https://www.felgus.dev/blog/common-react-lib-architecture#react-19)
 - 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
+- 📦 [React Scan 0.3 - See the parents of rendered components](https://github.com/aidenybai/react-scan/releases/tag/v0.3.0)
+- 📦 [TanStack Form 1.1 - Form reset util](https://github.com/TanStack/form/releases/tag/v1.1.0)
 - 📦 [React Router 7.4](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v740)
-- 📦 [React Scan 0.3](https://github.com/aidenybai/react-scan/releases/tag/v0.3.0)
-- 📦 [TanStack Form 1.1](https://github.com/TanStack/form/releases/tag/v1.1.0)
-- 🎥 [Theo \- t3․gg \- Tanner just fixed forms](https://www.youtube.com/watch?v=aezimBnSJqY)
+- 🎥 [Theo - Tanner just fixed forms](https://www.youtube.com/watch?v=aezimBnSJqY)
 - 🎥 [Epic Web Dev \- Upgrading React Router](https://www.epicweb.dev/tips/upgrading-react-router)
 - 🎥 [Web Dev Simplified \- Next.js Finally Fixed Caching](https://www.youtube.com/watch?v=nHnw3pusFXw)
 
