--- a/website/newsletter/226/index.mdx
+++ b/website/newsletter/226/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /226
-title: "This Week In React #226: Parcel, React Query Streaming, RN Worklets, expo/ui, React 19 Migration, React Router, React Scan, RN Framework for Enterprise, Oxc Minifier, Oxlint, Typescript in Go"
+title: "This Week In React #226: Parcel, TanStack, Astro, React-Scan, React-Router | Worklets, Enterprise Framework, Perf, Expo UI, FlatList, BackgroundTask | Node.js, Oxc, TypeScript Valibot"
 authors: [matthieugicquel, cyrilbo]
 date: 03-19-2025
 unlisted: true
@@ -57,15 +57,17 @@ If you’re “building your own framework” or have a niche use case, all this
 
 - 💸 [Convex launched an MCP Server](https://convex.link/thisweekmcp)
 - 🐦 [Support for streaming coming to React Query](https://bsky.app/profile/tkdodo.eu/post/3lkiuj7362k2a)
-- 🐦 [A shadcn-ui demo app that shadcn built to test tailwind v4](https://x.com/shadcn/status/1901708807434314186)
 - 🗓 [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Discover the full lineup : Shruti Kapoor, Quentin de Quelen, Sebastien Chopin! And get a 10% discount with code "TWIR”
 - 🗓 [Future Frontend](https://futurefrontend.com/?utm_source=thisweekinreact) \- 🇫🇮 Espoo - 26-28 May. Web development/design and AI meet on a single track. Secure your spot today with a 10% discount using code "TWIR”
+- 📣 [TanStack + Netlify Partnership](https://tanstack.com/blog/netlify-partnership)
 - 📜 [Live Mode](https://www.openstatus.dev/blog/live-mode-infinite-query): Live data updates in React with TanStack's Infinite Queries.
 - 📜 [How we migrated MUI X to React 19](https://mui.com/blog/react-19-update/): They needed to maintain compatibility with React 18 even though there are a few breaking changes in React 19 (with refs and StrictMode).
 - 📜 [Writing static websites with Vite and React](https://blog.carlosn.com.br/post/writing-static-websites-with-vite-and-react/): The author describes how the experimental `vite-ssg-react` package he’s working on works, and what he plans for the future.
 - 📜 [SSR Deep Dive for React Developers](https://www.developerway.com/posts/ssr-deep-dive-for-react-developers): Your framework probably handles SSR for you, but you’ll learn how to implement it yourself, and how it works along the way
 - 📜 [Common React libraries architecture](https://www.felgus.dev/blog/common-react-lib-architecture#react-19)
+- 📜 [Why React is surprisingly the best model for LLM workflows](https://www.gensx.com/blog/why-react-is-the-best-backend-workflow-engine)
 - 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
+- 📦 [Astro 5.5 - Type-safe sessions, better Mermaid diagrams integration](https://astro.build/blog/astro-550/)
 - 📦 [React Scan 0.3 - See the parents of rendered components](https://github.com/aidenybai/react-scan/releases/tag/v0.3.0)
 - 📦 [TanStack Form 1.1 - Form reset util](https://github.com/TanStack/form/releases/tag/v1.1.0)
 - 📦 [React Router 7.4](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v740)
@@ -108,7 +110,7 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 - 💸 [PostHog - How to set up a React Native remote config (with Expo Router)](https://dub.link/twir-mar19-rn)
 - 🐦 [React Native in Native apps: strategies and blockers](https://x.com/_atlj/status/1901990291306873047)
 - 🐦 [React Native Bottom Tabs integrate seamlessly with other native UI elements](https://x.com/o_kwasniewski/status/1884537940736393426)
-- 🐦 [expo/ui will launch with expo SDK 53](https://x.com/aleqsio/status/1902034184920584538): It will include fully native input components, iOS form sections, context menus and iOS previews.
+- 🐦 [expo/ui will launch with Expo SDK 53](https://x.com/aleqsio/status/1902034184920584538): It will include fully native input components, iOS form sections, context menus and iOS previews.
 - 🐦 [React Server Functions in Expo Router](https://x.com/Baconbrix/status/1900547469374574966)
 - 📊 [RevenueCat State of Subscription Apps 2025](https://www.revenuecat.com/state-of-subscription-apps-2025/): Cross-platform subscription apps (in particular React Native ones) have better performances in retention and monetization compared to native apps. The top-performing ones excel by optimizing onboarding, surfacing paywalls early, and leveraging hybrid monetization.
 - 📖 [Ultimate Guide to React Native Optimization 2025](https://www.callstack.com/ebook/the-ultimate-guide-to-react-native-optimization): Callstack just published their upgraded guide.
@@ -116,7 +118,7 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 - 📜 [We’re Building a New React Native Framework](https://www.callstack.com/blog/were-building-a-new-react-native-framework): Michał from callstack unveiled features of their React Native framework targeting large mobile teams, emphasizing fast native build caching. It's still not open sourced yet.
 - 📜 [FlatList Optimization: Avoid Re-Rendering When Adding or Removing Items](https://brainsandbeards.com/blog/2025-dont-rerender-new-flatlist-items/)
 - 📦 [Expo BackgroundTask Beta](https://docs.expo.dev/versions/latest/sdk/background-task/)
-- 📦 [Create React Native Library 0.48: Add template for nitro modules](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.48.0)
+- 📦 [Create React Native Library 0.48: Add template for Nitro modules](https://github.com/callstack/react-native-builder-bob/releases/tag/create-react-native-library%400.48.0)
 - 📦 [Galeria 1.1 - Fix new architecture issues, support for edge-to-edge](https://github.com/nandorojo/galeria/releases/tag/v1.1.0)
 - 🎙️ [RNR 325 \- Legend List with Jay Meistrich](https://infinite.red/react-native-radio/rnr-325-legend-list-with-jay-meistrich)
 
@@ -129,11 +131,9 @@ By decoupling multithreading from animations, Reanimated becomes leaner, which i
 - 📜 [Support for CSS and Baseline has shipped in ESLint](https://web.dev/blog/eslint-baseline-integration?hl=en)
 - 📦 [Oxc Minifier Alpha](https://oxc.rs/blog/2025-03-13-minifier-alpha): A new minifier that already outperform esbuild and is used with Rolldown, which aims to become the next default bundler for Vite.
 - 📦 [Oxlint Beta](https://oxc.rs/blog/2025-03-15-oxlint-beta): It features over 500 built-in linting rules with significant performance boosts, allowing small to medium projects to fully replace ESLint. ESLint plugin & custom rules support should come in the next major release.
-- 📦 [Astro 5.5 - Type-safe sessions, better Mermaid diagrams integration](https://astro.build/blog/astro-550/)
 - 📦 [Valibot 1.0 - 1kB alternative to Zod](https://valibot.dev/blog/valibot-v1-the-1-kb-schema-library/)
 - 📦 [Node.js 23.10 - New `--experimental-config-file`](https://nodejs.org/en/blog/release/v23.10.0)
 - 📦 [Node.js 20.19 - require(esm) enabled](https://nodejs.org/en/blog/release/v20.19.0)
-- 🎥 [Microsoft goes nuclear on TypeScript codebase](https://www.youtube.com/watch?v=PQ2WjtaPfXU)
 
 ---
 
