mention 2nd sponsored link

--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -241,6 +241,8 @@ This placement appears in the middle of the newsletter, in between the React and
 
 Sponsored Links are sponsored links inserted in the React or React-Native newsletter sections, alongside the regular content. **Subscribers can't miss them**, right between the section headlines and the list of links they are interested in.
 
+There's up to 2 sponsored links per section. When there's more than 1 sponsored link, the 2nd link appears in the middle of the section.
+
 <details>
     <summary>Ad constraints and example</summary>
 
